--- a/src/components/Slide/slide1.module.css
+++ b/src/components/Slide/slide1.module.css
@@ -1,4 +1,3 @@
-/* slide1.module.css */
 .container {
   width: 1000px;
   height: 400px;
@@ -8,19 +7,19 @@
 
 .imgContainer {
   display: flex;
-  transition: transform 0.5s ease; /* 슬라이드 애니메이션 */
-  width: 1000px; /* 고정된 너비 */
+  transition: transform 0.5s ease;
+  width: 1000px;
 }
 
 .imgs {
-  width: 1000px; /* 고정된 부모 너비 */
+  width: 1000px;
   height: 400px;
-  flex-shrink: 0; /* 크기를 줄이지 않도록 설정 */
+  flex-shrink: 0;
 }
 
 .img {
-  width: 100%; /* 부모 너비를 상속 */
-  height: 100%; /* 부모 높이를 상속 */
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
