--- a/src/components/Slide/slide2.module.css
+++ b/src/components/Slide/slide2.module.css
@@ -21,6 +21,10 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 20px;
+}
+.img:hover {
+  scale: 1.01;
 }
 
 .navButton {
