--- a/src/components/Modal/nest.module.css
+++ b/src/components/Modal/nest.module.css
@@ -1,40 +1,38 @@
 .button {
-  padding: 8px 16px;
-  margin: 5px;
-  border: none;
-  border-radius: 4px;
   background-color: #007bff;
   color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 15px;
+  font-size: 1em;
   cursor: pointer;
-  font-size: 14px;
 }
 
-.button:hover {
-  background-color: #0056b3;
+.outerModal,
+.innerModal {
+  padding: 20px;
 }
 
-/* 모달 내용 스타일 */
 .modalContent {
-  margin-bottom: 15px;
   width: 400px;
-  height: 400px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
+
 .modalContent2 {
-  margin-bottom: 15px;
   width: 300px;
-  height: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-/* 모달 푸터 스타일 */
+
 .modalFooter {
   display: flex;
-  justify-content: flex-end;
+  gap: 15px;
+  margin-top: 15px;
 }
 
-/* "모든 모달 닫기" 버튼을 위한 특별한 스타일 */
 .closeAllButton {
   background-color: #dc3545;
-}
-
-.closeAllButton:hover {
-  background-color: #c82333;
 }
