--- a/src/pages/accordian.module.css
+++ b/src/pages/accordian.module.css
@@ -1,8 +1,8 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .item {
   margin-bottom: 20px;
-}
-
-.header {
-  text-align: center;
-  margin-bottom: 25px;
 }
