✨ 툴팁 컴포넌트 마크다운 작성
툴팁 컴포넌트 마크다운 작성

--- a/src/pages/tooltip.module.css
+++ b/src/pages/tooltip.module.css
@@ -1,7 +1,10 @@
 .item {
   margin-bottom: 20px;
 }
-
+.title {
+  text-align: center;
+  margin-bottom: 20px;
+}
 .header {
   text-align: center;
   margin-bottom: 25px;
