✨ 팝오버 컴포넌트 마크다운 작성
팝오버 컴포넌트 마크다운 작성

--- a/src/components/Popover/popover.module.css
+++ b/src/components/Popover/popover.module.css
@@ -8,8 +8,8 @@
 }
 .popoverContainer {
   position: absolute;
-  top: 100px; /* 버튼 아래에 위치 */
-  left: 200px; /* 중앙 정렬을 위해 */
+  top: 100%; /* 초기값으로 나중에 조정 */
+  left: 50%;
   transform: translateX(-50%);
   background-color: white;
   border-radius: 8px;
